# airadar

./: .env.example  .gitignore  AIRadar-Agent-Roles.md  AIRadar-Architecture.md  DEPLOY.md  MVP.md  Makefile  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
.github/workflows/: refresh-data.yml
airadar/: __init__.py  cli.py  config.py
airadar/agents/: classifier.py  curator.py  delivery.py  discovery.py  enrichment.py  scraper.py
airadar/db/: models.py  session.py
airadar/db/repositories/: candidate_urls.py  digests.py  raw_pages.py  sources.py  tools.py  users.py
airadar/dedup/: embeddings.py  qdrant_client.py  scorer.py
airadar/delivery/: email.py  personalization.py  renderers.py
airadar/delivery/templates/: digest.html.j2  digest.txt.j2
airadar/llm/: client.py  schema.py  verifiers.py
airadar/llm/prompts/: enrichment_v1.txt
airadar/scheduler/: jobs.py
airadar/scraping/: orchestrator.py
airadar/sources/: base.py  github.py  hackernews.py  registry.py
alembic/: env.py
alembic/versions/: 24a71e10e97c_initial_core_schema.py  b2ca612e0f01_add_curator_fields_to_tools.py  c3df9a2b1e44_add_delivery_tables.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
frontend/app/api/submit-tool/: route.ts
frontend/app/api/subscribe/: route.ts
frontend/app/feed.xml/: route.ts
frontend/app/trends/: page.tsx
frontend/components/: AuroraBackground.tsx  Dashboard.tsx  FilterSidebar.tsx  RadarHero.tsx  Scene3DBackground.tsx  StatCard.tsx  SubmitToolForm.tsx  SubscribeForm.tsx  Tilt3D.tsx  ToolCard.tsx  TrendsView.tsx
frontend/lib/: data.ts  insights.ts  types.ts  utils.ts
frontend/public/data/: tools.json
scripts/: export_tools_json.py
tests/unit/: test_curator_units.py  test_delivery_units.py  test_pipeline_units.py  test_scheduler_units.py  test_sources_units.py
